--- a/src/app/components/team-stats/team-stats.component.css
+++ b/src/app/components/team-stats/team-stats.component.css
@@ -3,7 +3,7 @@
   margin: 5px;
   display: block;
 }
-span{
+span {
   float: right;
   cursor: pointer;
 }
@@ -23,4 +23,12 @@ mark {
 
 .card {
   max-width: 100%;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
 }
