--- a/src/app/components/team-stats/team-stats.component.css
+++ b/src/app/components/team-stats/team-stats.component.css
@@ -1,6 +1,5 @@
 :host {
-  padding: 10px;
-  margin: 5px;
+  padding: 8px;
   display: block;
 }
 span {
@@ -18,11 +17,18 @@ mark.L {
 
 mark {
   width: 50px;
-  margin-right: 5px;
+  margin-right: 2px;
+  margin-left: 2px;
 }
 
 .card {
   max-width: 100%;
+  margin: 0px;
+}
+
+.marks-container {
+  line-height: 35px;
+  word-break: break-all;
 }
 
 .modal-content {
