--- a/src/app/components/game-stats/game-stats.component.html
+++ b/src/app/components/game-stats/game-stats.component.html
@@ -25,7 +25,7 @@
     </button>
   </div>
   <div class="col-sm-1">
-    <select #daysSelect [(ngModel)]="selectedDays">
+    <select [(ngModel)]="selectedDays" (ngModelChange)="onChangeDays()">
       <option [value]="day" *ngFor="let day of days">{{ day }} days</option>
     </select>
   </div>
@@ -35,7 +35,6 @@
     class="col-sm-4"
     *ngFor="let team of nbaService.getTrackedTeams()"
     [team]="team"
-    [days]="selectedDays"
   >
   </app-team-stats>
 </div>
