--- a/src/app/components/game-stats/game-stats.component.css
+++ b/src/app/components/game-stats/game-stats.component.css
@@ -1,3 +1,11 @@
 .container-days {
   text-align: right;
 }
+
+.game-stats {
+  justify-content: space-between;
+}
+
+.container-filters > select {
+  padding: 0.6rem;
+}
