--- a/src/app/components/team-stats/team-stats.component.html
+++ b/src/app/components/team-stats/team-stats.component.html
@@ -2,7 +2,7 @@
   <div>
     <h3>
       {{ team.full_name }} [{{ team.abbreviation }}]
-      <span (click)="modalDialogService.show()">&times;</span>
+      <span (click)="modalService.show()">&times;</span>
     </h3>
     <h6>{{ team.conference }}ern conference</h6>
   </div>
