--- a/src/app/components/game-stats/game-stats.component.html
+++ b/src/app/components/game-stats/game-stats.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-10">
+<div class="row game-stats">
+  <div class="col-md-8 container-filters">
     <select
       [(ngModel)]="selectedConference"
       (ngModelChange)="onChangeConference()"
@@ -24,7 +24,7 @@
       Track team
     </button>
   </div>
-  <div class="col-md-2 container-days">
+  <div class="col-md-3 container-days">
     <select [(ngModel)]="selectedDays" (ngModelChange)="onChangeDays()">
       <option [value]="day" *ngFor="let day of days">{{ day }} days</option>
     </select>
